# goldphoenix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_mvp_ucrt64.cmd  run_mvp_ucrt64.cmd
src/: AppTypes.h  BurstCaptureManager.cpp  BurstCaptureManager.h  BurstGridWidget.cpp  BurstGridWidget.h  CameraFrameSource.cpp  CameraFrameSource.h  FrameCellWidget.cpp  FrameCellWidget.h  FrameSourceBase.cpp  FrameSourceBase.h  ImageUtils.cpp  ImageUtils.h  MainWindow.cpp  MainWindow.h  MotionDetector.cpp  MotionDetector.h  PreviewWidget.cpp  PreviewWidget.h  ProcessingWorker.cpp  ProcessingWorker.h  RingBuffer.cpp  RingBuffer.h  SettingsManager.cpp  SettingsManager.h  VideoFileFrameSource.cpp  VideoFileFrameSource.h  main.cpp
tools/: FitDefaultsTool.cpp  SimulateActionCaptureTool.cpp
